--- a/Searching/Searching.csproj
+++ b/Searching/Searching.csproj
@@ -52,6 +52,7 @@
     <Compile Include="AbstractEdge.cs" />
     <Compile Include="Clause.cs" />
     <Compile Include="InferenceEngine.cs" />
+    <Compile Include="Literal.cs" />
     <Compile Include="Road.cs" />
     <Compile Include="SearchHelper.cs" />
     <Compile Include="AbstractNode.cs" />
